# chat_oracle

./: README.md  TODO.md  TODO_archive.md  oracle.ru.md
backend/: pyproject.toml
backend/app/: channel.py  chat.py
backend/app/core/: config.py
frontend/: README.md  package.json  pnpm-lock.yaml
