[project]
name = "app"
version = "0.1.0"
description = "Twichist backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.127.0",
    "flask-pydantic>=0.13.2",
    "httpx>=0.28.1",
    "pony>=0.7.19",
    "pydantic-settings>=2.12.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-v"
]
testpaths = [
    "tests",
    "integration",
]
log_cli = true
log_cli_level = "INFO"
markers = [
    "messaging: marks tests as messaging tests",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "debugpy>=1.8.17",
    "pytest>=9.0.1",
    "ruff>=0.14.10",
]

